--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,26 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.orion</groupId>
-  <artifactId>myjgroupsNode2</artifactId>
-  <packaging>war</packaging>
-  <version>0.0.1</version>
-  <dependencies>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.orion</groupId>
+	<artifactId>myjgroupsNode2</artifactId>
+	<packaging>war</packaging>
+	<version>0.0.1</version>
+	<repositories>
+		<repository>
+			<id>com.springsource.repository.bundles.external</id>
+			<name>EBR External Release Repository</name>
+			<url>http://192.168.17.199:8080/nexus/content/repositories/public/</url>
+		</repository>
+
+		<repository>
+			<id>maven2-repository.dev.jboss</id>
+			<name>Java.net Repository for Maven</name>
+			<url>http://repository.jboss.org/maven2/</url>
+			<layout>default</layout>
+		</repository>
+
+	</repositories>
+	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -18,15 +33,29 @@
 			<artifactId>jgroups</artifactId>
 			<version>3.3.0.Final</version>
 		</dependency>
-		<!-- <dependency> <groupId>commons-lang</groupId> <artifactId>commons-lang</artifactId> 
-			<version>2.3</version> </dependency> <dependency> <groupId>log4j</groupId> 
-			<artifactId>log4j</artifactId> <version>1.2.17</version> <scope>test</scope> 
-			</dependency> -->
+
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
 			<version>2.5</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.woonill</groupId>
+			<artifactId>rmce-core</artifactId>
+			<version>0.8.5.1</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.1.3</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.3</version>
 		</dependency>
 
 
