--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
 	<artifactId>myjgroupsNode2</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.1</version>
+	<name>myjgroupsNode2</name>
 	<repositories>
 		<repository>
 			<id>com.springsource.repository.bundles.external</id>
@@ -40,24 +41,11 @@
 			<version>2.5</version>
 			<scope>provided</scope>
 		</dependency>
-		<dependency>
-			<groupId>com.woonill</groupId>
-			<artifactId>rmce-core</artifactId>
-			<version>0.8.5.1</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-logging</groupId>
-			<artifactId>commons-logging</artifactId>
-			<version>1.1.3</version>
-		</dependency>
-
-
-		<dependency>
-			<groupId>commons-lang</groupId>
-			<artifactId>commons-lang</artifactId>
-			<version>2.3</version>
-		</dependency>
-
+		<!-- <dependency> <groupId>com.woonill</groupId> <artifactId>rmce-core</artifactId> 
+			<version>0.8.5.1</version> </dependency> <dependency> <groupId>commons-logging</groupId> 
+			<artifactId>commons-logging</artifactId> <version>1.1.3</version> </dependency> 
+			<dependency> <groupId>commons-lang</groupId> <artifactId>commons-lang</artifactId> 
+			<version>2.3</version> </dependency> -->
 
 	</dependencies>
 	<build>
@@ -67,39 +55,31 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>2.1-beta-1</version>
+				<version>2.4</version>
 				<configuration>
 					<packagingExcludes>**/**/*Test*.*</packagingExcludes>
+						<packagingExcludes>**/lib/**</packagingExcludes>
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.codehaus.cargo</groupId>
-				<artifactId>cargo-maven2-plugin</artifactId>
-				<version>1.4.3</version>
-				<configuration>
-					<container>
-						<containerId>tomcat7x</containerId>
-						<type>remote</type>
-					</container>
-					<configuration>
-						<type>runtime</type>
-						<properties>
-							<cargo.remote.username>admin</cargo.remote.username>
-							<cargo.remote.password>admin</cargo.remote.password>
-
-							<cargo.remote.uri>http://192.168.17.194:8080/manager/text</cargo.remote.uri>
-						</properties>
-					</configuration>
-
-				</configuration>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.4</version>
 				<executions>
-					<!-- 执行的动作 -->
 					<execution>
-						<id>verify-deployer</id>
-						<phase>install</phase>      <!-- 解析install -->
+						<phase>package</phase>
 						<goals>
-							<goal>deployer-redeploy</goal>
+							<goal>jar</goal>
 						</goals>
+						<configuration>
+							<finalName>user</finalName>
+							<includes>
+								<include>**/server/User*.*</include>
+							</includes>
+							<archive>
+								<addMavenDescriptor>false</addMavenDescriptor>
+							</archive>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
